Header css fixed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <!-- header started -->
     <header id="head">
         <div class="container">
+            <div class="header-area">
+                <div class="header-content">
+                    <h3>Happy New Year</h3>
+                    <h2>New Year Party <br> Celebration</h2>
+                </div>
+            </div>
+          
         </div>
     </header>
 
