categories section strted

--- a/index.html
+++ b/index.html
@@ -14,14 +14,32 @@
     <header id="head">
         <div class="container">
             <div class="header-area">
+                <div class="header-background-img overlay">
+                    <img class="images" src="resources/Banner Image.png" alt="">
+                    
+                </div>
                 <div class="header-content">
-                    <h3>Happy New Year</h3>
-                    <h2>New Year Party <br> Celebration</h2>
+                    <h3 class="header-title">Happy New Year</h3>
+                    <h2 class="header-title-2">New Year Party <br> Celebration</h2>
                 </div>
             </div>
           
         </div>
     </header>
+    <!-- header End -->
+
+    <section id="categories">
+        <div class="container">
+            <div class="categories-content">
+                <h1 class="categories-heading">65% OFF</h1>
+                <p class="categories-pera">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3 class="categories-head">ALL CATEGORIES</h3>
+            </div>
+            <div class="categories-img">
+                <img src="resources/New Year Photo.png" alt="">
+            </div>
+        </div>
+    </section>
 
 
 </body>
