welcome section started

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
             <div class="header-area">
                 <div class="header-background-img overlay">
                     <img class="images" src="resources/Banner Image.png" alt="">
-                    
                 </div>
                 <div class="header-content">
                     <h3 class="header-title">Happy New Year</h3>
                     <h2 class="header-title-2">New Year Party <br> Celebration</h2>
                 </div>
             </div>
-          
+
         </div>
     </header>
     <!-- header End -->
-
+    <!-- categories section started -->
     <section id="categories">
         <div class="container">
             <div class="categories-content">
@@ -40,7 +39,33 @@
             </div>
         </div>
     </section>
+    <!-- categories section End -->
 
+    <!-- welcome section started -->
+    <section id="welcome">
+        <div class="container">
+            <div class="party-section">
+                <div class="welcome-background">
+                    <img src="resources/Vectorrr.png" alt="">
+                </div>
+                <div class="welcome-content">
+                    <div class="party-text">
+                        <h2 class="party-heading">Welcome to <br> midnight party</h2>
+                        <p class="party-para">
+                            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
+                            Ipsum sed sodales risus ut pellentesque vel euismod.
+                        </p>
+                        <button class="party-button">JOIN NOW</button>
+                    </div>
+                    <div class="party-img">
+                        <img src="resources/Group 70.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- welcome section End -->
 
 </body>
 
