--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="party-img">
                         <img src="resources/Group 70.png" alt="">
-                    </div>
+                    </div>f
                 </div>
             </div>
 
@@ -67,6 +67,18 @@
     </section>
     <!-- welcome section End -->
 
+    <!-- contact section started -->
+
+    <section id="contact">
+        <div class="container">
+            <div class="contact-area">
+                <h2> <span>Place:</span> New Park Hotel</h2>
+                <h2> <span>Date:</span> 31 December Night 2023</h2>
+                <h2> <span>Time:</span> Evening 7.30 pm to 12.30 <br> Am</h2>
+            </div>
+        </div>
+    </section>
+    <!-- contact section ENd -->
 </body>
 
 </html>
