--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <h2> <span>Place:</span> New Park Hotel</h2>
                 <h2> <span>Date:</span> 31 December Night 2023</h2>
                 <h2> <span>Time:</span> Evening 7.30 pm to 12.30 <br> Am</h2>
+                <button class="contact-btn">JOIN NOW</button>
             </div>
         </div>
     </section>
