contact section end

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <section id="contact">
         <div class="container">
             <div class="contact-area">
-                <h2> <span>Place:</span> New Park Hotel</h2>
-                <h2> <span>Date:</span> 31 December Night 2023</h2>
-                <h2> <span>Time:</span> Evening 7.30 pm to 12.30 <br> Am</h2>
+                <h2 class="contact-heading"> <span class="red">Place:</span> New Park Hotel</h2>
+                <h2 class="contact-heading"> <span class="red">Date:</span> 31 December Night 2023</h2>
+                <h2 class="contact-heading"> <span class="red">Time:</span> Evening 7.30 pm to 12.30 <br> Am</h2>
                 <button class="contact-btn">JOIN NOW</button>
             </div>
         </div>
