--- a/index.html
+++ b/index.html
@@ -80,6 +80,33 @@
         </div>
     </section>
     <!-- contact section ENd -->
+
+    <section id="coming">
+        <div class="container">
+            <div class="comeing-area">
+                <div class="row">
+                    <div class="left-content">
+                        <h4>NEW BEST <br> OFFER</h4>
+                        <h3>Coming <br> Soon</h3>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                            sodales risus ut pellentesque vel euismod.</p>
+                    </div>
+
+                </div>
+                <div class="row">
+
+                   <div class="content-img">
+                    <img src="resources/Ellipse 1.png" alt="">
+                   </div>
+                </div>
+                <div class="row">
+                    <h4>2024</h4>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="resources/Group 96.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
