coming section end

--- a/index.html
+++ b/index.html
@@ -86,23 +86,22 @@
             <div class="comeing-area">
                 <div class="row">
                     <div class="left-content">
-                        <h4>NEW BEST <br> OFFER</h4>
-                        <h3>Coming <br> Soon</h3>
-                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                        <h4 class="top-content">NEW BEST <br> OFFER</h4>
+                        <h3 class="base-content">Coming <br> Soon</h3>
+                        <p class="down-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
+                            sed
                             sodales risus ut pellentesque vel euismod.</p>
                     </div>
-
                 </div>
                 <div class="row">
-
-                   <div class="content-img">
-                    <img src="resources/Ellipse 1.png" alt="">
-                   </div>
+                    <div class="content-img">
+                        <img class="content-imges" src="resources/Ellipse 1.png" alt="">
+                    </div>
                 </div>
                 <div class="row">
-                    <h4>2024</h4>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                    <img src="resources/Group 96.png" alt="">
+                    <h4 class="setion">2024</h4>
+                    <p class="setion-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img class="grup-img" src="resources/Group 96.png" alt="">
                 </div>
             </div>
         </div>
