--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div class="container">
             <div class="header-area">
                 <div class="header-background-img overlay">
-                    <img class="images" src="resources/Banner Image.png" alt="">
                 </div>
                 <div class="header-content">
                     <h3 class="header-title">Happy New Year</h3>
@@ -81,14 +80,16 @@
     </section>
     <!-- contact section ENd -->
 
+    <!-- coming section Started -->
     <section id="coming">
         <div class="container">
             <div class="comeing-area">
-                <div class="row">
+                <div class="row mt">
                     <div class="left-content">
                         <h4 class="top-content">NEW BEST <br> OFFER</h4>
                         <h3 class="base-content">Coming <br> Soon</h3>
-                        <p class="down-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
+                        <p class="down-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                            molestie malesuada. Ipsum
                             sed
                             sodales risus ut pellentesque vel euismod.</p>
                     </div>
@@ -98,14 +99,32 @@
                         <img class="content-imges" src="resources/Ellipse 1.png" alt="">
                     </div>
                 </div>
-                <div class="row">
-                    <h4 class="setion">2024</h4>
+                <div class="row mt">
+                    <h4 class="setion">202 <br> 4</h4>
                     <p class="setion-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                     <img class="grup-img" src="resources/Group 96.png" alt="">
                 </div>
             </div>
         </div>
     </section>
+    <!-- coming section ENd -->
+
+    <!-- sale section started -->
+    <section id="sale">
+        <div class="container">
+            <div class="sale-area">
+               <div class="headiing">
+                <h3 class="sale-head">WHAT IS</h3>
+                <h3 class="sale-head">FUNCTIONAL</h3>
+               </div>
+                <h1 class="sales"><span>Holidays</span> Sale 50%</h1>
+                <p class="sale-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+            </div>
+        </div>
+    </section>
+    <!-- sale section End -->
 </body>
 
 </html>
