--- a/index.html
+++ b/index.html
@@ -124,6 +124,20 @@
             </div>
         </div>
     </section>
+    <section id="sale">
+        <div class="container">
+            <div class="sale-area">
+               <div class="headiing">
+                <h3 class="sale-head">WHAT IS</h3>
+                <h3 class="sale-head">FUNCTIONAL</h3>
+               </div>
+                <h1 class="sales"><span>Holidays</span> Sale 50%</h1>
+                <p class="sale-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+            </div>
+        </div>
+    </section>
    
     <!-- sale section End -->
 </body>
